--- a/weddingHub.html
+++ b/weddingHub.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Wedding Hub</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 <style>
 #title{
 	text-align: center;
@@ -24,6 +26,18 @@ font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 h5{
 text-align: center;
 }
+
+#left{
+	margin-left: 100px;
+}
+
+#appStore{
+text-align: center;
+}
+footer{
+	background-color: black;
+	padding-top: 20px;
+}
 </style>
 </head>
 
@@ -33,6 +47,9 @@ text-align: center;
 </div>
 <div id="blurb">
 <p>Wedding Hub is an app where your guests will be able to have a one stop destination to gather information for your special day. With the app your guests will be able to access maps, directions, and details of your wedding, this will help to keep things more organized and take some of the wedding day stress out of the coordinating of directions on how to get to your venue. The app also contains things such as what food options there will be as well as an option to share photos from the night to an album based off of the hastag (#) that you designated for your wedding night. </p>
+</div>
+<div id="left">
+<img src="map.png" height="200px" width="absolute">
 </div>
 <h5>Register or login below</h5>
 <div id="buttons">
